<resources>
    <string name="app_name">MyApplication</string>
    <string name="avengers">Avengers: End Game</string>
    <string name="pg">13+</string>
    <string name="tags">Action, Adventure, Fantasy</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="actor1">Robert\nDowney Jr.</string>
    <string name="actor2">Chris\nEvans</string>
    <string name="actor3">Mark\nRuffalo</string>
    <string name="actor4">Chris\nHemsworth</string>
    <string name="back">Back</string>
    <string name="storylineItself">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="this_is_main_activity"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies List</string>
    <string name="movie_duration">137 MIN</string>
</resources>