<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_3x"
    android:orientation="vertical"
    android:background="@color/colorDarkGray"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="222dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:text="@string/pg"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="343dp"
            android:layout_height="match_parent"
            android:gravity="start|bottom"
            android:text="@string/avengers"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:text="@string/tags"
            android:textColor="@color/colorPink"
            android:textSize="14sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="179dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="14.5dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="14.5dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="14.5dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="14.5dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="14.5dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star_icon2" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="20dp"
            android:text="@string/reviews"
            android:gravity="center"
            android:textColor="@color/colorNotSoLightGray"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>


