<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray"
    tools:context=".FragmentMovieDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_path"
                android:textColor="@color/colorNotSoLightGray"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/back"
                android:textColor="@color/colorNotSoLightGray"
                app:layout_constraintStart_toEndOf="@id/back_icon" />

        </LinearLayout>


        <TextView
            android:id="@+id/pg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="226dp"
            android:text="@string/pg"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/avengers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:text="@string/avengers"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/pg" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tags"
            android:textColor="@color/colorPink"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/avengers" />

        <ImageView
            android:id="@+id/star_icon1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="345.98dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <ImageView
            android:id="@+id/star_icon2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32.27dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="329.71dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <ImageView
            android:id="@+id/star_icon3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="345.98dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/star_icon2"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <ImageView
            android:id="@+id/star_icon4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="345.98dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/star_icon3"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <ImageView
            android:id="@+id/star_icon5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon2"
            app:layout_constraintStart_toEndOf="@+id/star_icon4"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:text="@string/reviews"
            android:textColor="@color/colorNotSoLightGray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toEndOf="@+id/star_icon5"
            app:layout_constraintTop_toBottomOf="@+id/tag" />


        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_vertical"
            android:text="@string/storyline"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/star_icon1" />

        <TextView
            android:id="@+id/storylineItself"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:text="@string/storylineItself"
            android:textColor="@color/colorLightGray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/storylineItself" />

        <ImageView
            android:id="@+id/actor1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/actor1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
            android:id="@+id/actorName1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor1"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/actorName2"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/actor1" />

        <ImageView
            android:id="@+id/actor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/actor2"
            app:layout_constraintEnd_toStartOf="@+id/actor3"
            app:layout_constraintStart_toEndOf="@id/actor1"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
            android:id="@+id/actorName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor2"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/actorName3"
            app:layout_constraintStart_toStartOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@+id/actor2" />

        <ImageView
            android:id="@+id/actor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/actor3"
            app:layout_constraintEnd_toStartOf="@+id/actor4"
            app:layout_constraintStart_toEndOf="@id/actor2"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
            android:id="@+id/actorName3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor3"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/actorName4"
            app:layout_constraintStart_toStartOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@+id/actor3" />

        <ImageView
            android:id="@+id/actor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/actor4"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
            android:id="@+id/actorName4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/actor4"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/actor4"
            app:layout_constraintTop_toBottomOf="@+id/actor4" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
